# fds_dashboard

./: .gitignore  README.md  api.yml  db.yml
api/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
api/api/: cache.py  database.py  helpers.py  main.py  models.py  queries.py  query_text.py  schemas.py
api/api/queries/: campaign_starts.py  general_info.py  rankings.py  reaction.py  stats.py
api/kn_fds_statistics_api/: cache.py  helpers.py  main.py  models.py  queries.py  query_text.py  requirements.txt
api/tests/: test_kn_fds_statistics_api.py  test_routes.py
db/: .gitignore  README.md  folder_structure.txt
db/postgres/: Dockerfile  init.sh  postgresql.conf
db/postgres/data/: campaigns.csv  categories.csv  classifications.csv  jurisdictions.csv  public_bodies.csv
db/python_scripts/: Exploration.ipynb  README.md  helpers.py  main.py  messag_test.ipynb  pp.py  pp_test.ipynb  requirements.txt
db/python_scripts/data/: campaigns.pbz2  public_bodies.pbz2
frontend/: .gitignore  README.md  download_static.sh  index.html  main.css  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: A.svelte  A1.svelte  A2.svelte  B1.svelte  B2.svelte  B3.svelte  C1.svelte  C2.svelte  Card.svelte  Costs.svelte  D.svelte  D1.svelte  D2.svelte  D3.svelte  DonutResolution.svelte  E1.svelte  E2.svelte  E3.svelte  Filter.svelte  LineRequests.svelte  RankingCampaigns.svelte  RankingJurisdictions.svelte  ReactionTime.svelte  RefusalReasons.svelte  Status.svelte
frontend/src/lib/charts/: Balken.svelte  Box.svelte  Chart.svelte  Donut.svelte  Line.svelte  Table.svelte
frontend/src/lib/data/: data.js
frontend/src/lib/helpers/: clickOutside.js  formatting.js  urlOps.js
frontend/src/lib/svg/: ArrowDown.svelte  ArrowUp.svelte  Dropdown.svelte  Lense.svelte
frontend/src/stores/: campaign_starts.js  general_info.js  ranking.js  ranking_campaigns.js  ranking_jurisdictions.js  ranking_public_bodies.js  stats.js  total_stats.js
frontend/static/css/fds/: main.css
update_service/: Dockerfile  README.md  pyproject.toml
update_service/kn_fds_update_service/: database.py  helpers.py  main.py  models.py  pp_update.py  queries.py  updating_foi_request_list_all.py  upload.py
