[tool.poetry]
name = "kn_fds_update_service"
version = "0.1.0"
description = ""
authors = ["Xenia Saar", "Judith Kunz", "Jonas Stettner <mail@jstet.net>"]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "kn_fds_update_service.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
